--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "http://blog.cwestb.com"
+baseurl = "http://www.cwestb.com"
 languageCode = "en-us"
 title = "Sally Hagy-Boyer's Blog"
 disqusShortname = "shbartist"
